--- a/index.html
+++ b/index.html
@@ -273,12 +273,11 @@
           <li class="list-inline-item badge bg-primary m-1">JavaScript</li>
           <li class="list-inline-item badge bg-primary m-1">MySQL</li>
           <li class="list-inline-item badge bg-primary m-1">jQuery</li>
-          <li class="list-inline-item badge bg-primary m-1">JWT</li>
           <li class="list-inline-item badge bg-primary m-1">REST APIs</li>
           <li class="list-inline-item badge bg-primary m-1">Postman</li>
-          <li class="list-inline-item badge bg-primary m-1">Git</li>
+          <li class="list-inline-item badge bg-primary m-1">GitHub</li>
           <li class="list-inline-item badge bg-primary m-1">Bootstrap</li>
-          <li class="list-inline-item badge bg-primary m-1">Agile</li>
+          
         </ul>
       </div>
 
