--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				<div class="col-md-10 text-center pt-5">
 
 					<h1 class="site-heading site-animate">Hello, I'm <strong class="d-block">Nikam Vaishnavi</strong></h1>
-					<strong class="d-block text-white text-uppercase letter-spacing">and this is My Rezume</strong>
+					<strong class="d-block text-white text-uppercase letter-spacing"> And This is My portfolio</strong>
 
 				</div>
 			</div>
